fix : bootstrap link

--- a/frontend/html/main-page.html
+++ b/frontend/html/main-page.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Main Page</title>
-        <link href="../bootstrap/css/bootstrap.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="../css/main-page.css">
     </head>
     <body>
@@ -17,7 +17,7 @@
 
             <div class="sidebar">
                 <div class="sidebar-header">
-                    <img src="philopong.webp" alt="Profile Image">
+                    <img src="../images/philopong.webp" alt="Profile Image">
                     <b>Hyuim</b>
                 </div>
 
