--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="keywords" content="ping pong, pong, ping">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-	<link rel="stylesheet" href="../css/login.css">
+	<link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" href="./css/login.css">
 	<title>login</title>
 </head>
 <body class="bg-color">
