--- a/frontend/match-making.html
+++ b/frontend/match-making.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Match Making</title>
-        <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-        <link rel="stylesheet" href="../css/match-making.css">
+        <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
+        <link rel="stylesheet" href="./css/match-making.css">
     </head>
     <body>
         <div class="container">
