feat : add sidebar in profile.html

--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -9,12 +9,40 @@
     </head>
     <body>
         <div class="container">
+            <div class="sidebar">
+                <div class="sidebar-header">
+                    <img src="./images/philopong.webp" alt="Profile Image">
+                    <b>Hyuim</b>
+                </div>
+
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">My page</a></li>
+                        <li><a href="#">Local Game</a></li>
+                        <li><a href="#">Multi Game</a></li>
+                    </ul>
+                </div>
+
+                <hr>
+                <div class="friend-list">
+                    <b class="title">Friend List</b>
+                    <button class="friend-add-button"></button>
+                    <input class="friend-search-bar" type="text" placeholder="Search..">
+
+                    <ul>
+                        <li class="friend-status">woosekim</li>
+                        <li class="friend-status">phan</li>
+                        <li class="friend-status">hcho2</li>
+                        <li class="friend-status">soohlee</li>
+                    </ul>
+                </div>
+            </div>
             <div class="row">
                 <h1 class="py-3 title">Profile</h1>
             </div>
             <div class="row">   
                 <div class="col-md">
-                    <img class="info-picture" src="../images/philopong.webp">
+                    <img class="info-picture" src="./images/philopong.webp">
                 </div>
                 <div class="col-md info">
                     <div class="info-element">ID : test</div>
