--- a/frontend/tournament.html
+++ b/frontend/tournament.html
@@ -20,16 +20,10 @@
 			  <li class="tournament-bracket__item">
 				<div class="tournament-bracket__match" tabindex="0">
 				  <table class="tournament-bracket__table">
-					<thead class="sr-only">
-					  <tr>
-						<th>Country</th>
-						<th>Score</th>
-					  </tr>
-					</thead>
 					<tbody class="tournament-bracket__content">
 					  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-						<td class="tournament-bracket__country">
-						  <abbr class="tournament-bracket__code" title="Canada">phan</abbr>
+						<td class="tournament-bracket__player">
+						  <abbr class="tournament-bracket__code">phan</abbr>
 						  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
 						</td>
 						<td class="tournament-bracket__score">
@@ -37,8 +31,8 @@
 						</td>
 					  </tr>
 					  <tr class="tournament-bracket__team">
-						<td class="tournament-bracket__country">
-						  <abbr class="tournament-bracket__code" title="Kazakhstan">soohlee</abbr>
+						<td class="tournament-bracket__player">
+						  <abbr class="tournament-bracket__code">soohlee</abbr>
 						  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
 						</td>
 						<td class="tournament-bracket__score">
@@ -52,16 +46,10 @@
 			  <li class="tournament-bracket__item">
 				<div class="tournament-bracket__match" tabindex="0">
 				  <table class="tournament-bracket__table">
-					<thead class="sr-only">
-					  <tr>
-						<th>Country</th>
-						<th>Score</th>
-					  </tr>
-					</thead>
 					<tbody class="tournament-bracket__content">
 					  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-						<td class="tournament-bracket__country">
-						  <abbr class="tournament-bracket__code" title="Canada">phan</abbr>
+						<td class="tournament-bracket__player">
+						  <abbr class="tournament-bracket__code">phan</abbr>
 						  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
 						</td>
 						<td class="tournament-bracket__score">
@@ -69,8 +57,8 @@
 						</td>
 					  </tr>
 					  <tr class="tournament-bracket__team">
-						<td class="tournament-bracket__country">
-						  <abbr class="tournament-bracket__code" title="Kazakhstan">soohlee</abbr>
+						<td class="tournament-bracket__player">
+						  <abbr class="tournament-bracket__code">soohlee</abbr>
 						  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
 						</td>
 						<td class="tournament-bracket__score">
@@ -84,16 +72,10 @@
 			  <li class="tournament-bracket__item">
 				<div class="tournament-bracket__match" tabindex="0">
 				  <table class="tournament-bracket__table">
-					<thead class="sr-only">
-					  <tr>
-						<th>Country</th>
-						<th>Score</th>
-					  </tr>
-					</thead>
 					<tbody class="tournament-bracket__content">
 					  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-						<td class="tournament-bracket__country">
-						  <abbr class="tournament-bracket__code" title="Canada">phan</abbr>
+						<td class="tournament-bracket__player">
+						  <abbr class="tournament-bracket__code">phan</abbr>
 						  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
 						</td>
 						<td class="tournament-bracket__score">
@@ -101,8 +83,8 @@
 						</td>
 					  </tr>
 					  <tr class="tournament-bracket__team">
-						<td class="tournament-bracket__country">
-						  <abbr class="tournament-bracket__code" title="Kazakhstan">soohlee</abbr>
+						<td class="tournament-bracket__player">
+						  <abbr class="tournament-bracket__code">soohlee</abbr>
 						  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
 						</td>
 						<td class="tournament-bracket__score">
@@ -116,16 +98,10 @@
 			  <li class="tournament-bracket__item">
 				<div class="tournament-bracket__match" tabindex="0">
 				  <table class="tournament-bracket__table">
-					<thead class="sr-only">
-					  <tr>
-						<th>Country</th>
-						<th>Score</th>
-					  </tr>
-					</thead>
 					<tbody class="tournament-bracket__content">
 					  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-						<td class="tournament-bracket__country">
-						  <abbr class="tournament-bracket__code" title="Canada">phan</abbr>
+						<td class="tournament-bracket__player">
+						  <abbr class="tournament-bracket__code">phan</abbr>
 						  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
 						</td>
 						<td class="tournament-bracket__score">
@@ -133,8 +109,8 @@
 						</td>
 					  </tr>
 					  <tr class="tournament-bracket__team">
-						<td class="tournament-bracket__country">
-						  <abbr class="tournament-bracket__code" title="Kazakhstan">soohlee</abbr>
+						<td class="tournament-bracket__player">
+						  <abbr class="tournament-bracket__code">soohlee</abbr>
 						  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
 						</td>
 						<td class="tournament-bracket__score">
@@ -153,16 +129,10 @@
 				<li class="tournament-bracket__item">
 					<div class="tournament-bracket__match" tabindex="0">
 					  <table class="tournament-bracket__table">
-						<thead class="sr-only">
-						  <tr>
-							<th>Country</th>
-							<th>Score</th>
-						  </tr>
-						</thead>
 						<tbody class="tournament-bracket__content">
 						  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-							<td class="tournament-bracket__country">
-							  <abbr class="tournament-bracket__code" title="Canada">phan</abbr>
+							<td class="tournament-bracket__player">
+							  <abbr class="tournament-bracket__code">phan</abbr>
 							  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
 							</td>
 							<td class="tournament-bracket__score">
@@ -170,8 +140,8 @@
 							</td>
 						  </tr>
 						  <tr class="tournament-bracket__team">
-							<td class="tournament-bracket__country">
-							  <abbr class="tournament-bracket__code" title="Kazakhstan">soohlee</abbr>
+							<td class="tournament-bracket__player">
+							  <abbr class="tournament-bracket__code">soohlee</abbr>
 							  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
 							</td>
 							<td class="tournament-bracket__score">
@@ -185,16 +155,10 @@
 				  <li class="tournament-bracket__item">
 					<div class="tournament-bracket__match" tabindex="0">
 					  <table class="tournament-bracket__table">
-						<thead class="sr-only">
-						  <tr>
-							<th>Country</th>
-							<th>Score</th>
-						  </tr>
-						</thead>
 						<tbody class="tournament-bracket__content">
 						  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-							<td class="tournament-bracket__country">
-							  <abbr class="tournament-bracket__code" title="Canada">phan</abbr>
+							<td class="tournament-bracket__player">
+							  <abbr class="tournament-bracket__code">phan</abbr>
 							  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
 							</td>
 							<td class="tournament-bracket__score">
@@ -202,8 +166,8 @@
 							</td>
 						  </tr>
 						  <tr class="tournament-bracket__team">
-							<td class="tournament-bracket__country">
-							  <abbr class="tournament-bracket__code" title="Kazakhstan">soohlee</abbr>
+							<td class="tournament-bracket__player">
+							  <abbr class="tournament-bracket__code">soohlee</abbr>
 							  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
 							</td>
 							<td class="tournament-bracket__score">
@@ -222,16 +186,10 @@
 				<li class="tournament-bracket__item">
 					<div class="tournament-bracket__match" tabindex="0">
 					  <table class="tournament-bracket__table">
-						<thead class="sr-only">
-						  <tr>
-							<th>Country</th>
-							<th>Score</th>
-						  </tr>
-						</thead>
 						<tbody class="tournament-bracket__content">
 						  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-							<td class="tournament-bracket__country">
-							  <abbr class="tournament-bracket__code" title="Canada">phan</abbr>
+							<td class="tournament-bracket__player">
+							  <abbr class="tournament-bracket__code">phan</abbr>
 							  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
 							</td>
 							<td class="tournament-bracket__score">
@@ -239,8 +197,8 @@
 							</td>
 						  </tr>
 						  <tr class="tournament-bracket__team">
-							<td class="tournament-bracket__country">
-							  <abbr class="tournament-bracket__code" title="Kazakhstan">soohlee</abbr>
+							<td class="tournament-bracket__player">
+							  <abbr class="tournament-bracket__code">soohlee</abbr>
 							  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
 							</td>
 							<td class="tournament-bracket__score">
@@ -259,16 +217,10 @@
 				<li class="tournament-bracket__item">
 					<div class="tournament-bracket__match" tabindex="0">
 					  <table class="tournament-bracket__table">
-						<thead class="sr-only">
-						  <tr>
-							<th>Country</th>
-							<th>Score</th>
-						  </tr>
-						</thead>
 						<tbody class="tournament-bracket__content">
 						  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-							<td class="tournament-bracket__country">
-							  <abbr class="tournament-bracket__code" title="Canada">phan</abbr>
+							<td class="tournament-bracket__player">
+							  <abbr class="tournament-bracket__code">phan</abbr>
 							  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
 							</td>
 							<td class="tournament-bracket__score">
@@ -276,8 +228,8 @@
 							</td>
 						  </tr>
 						  <tr class="tournament-bracket__team">
-							<td class="tournament-bracket__country">
-							  <abbr class="tournament-bracket__code" title="Kazakhstan">soohlee</abbr>
+							<td class="tournament-bracket__player">
+							  <abbr class="tournament-bracket__code">soohlee</abbr>
 							  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
 							</td>
 							<td class="tournament-bracket__score">
