--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Index</title>
-        <link id="style" rel="stylesheet" href="">
-    </head>
-    <body>
-        <main class="App"></main>
-        <script type="module" src="./js/main.js"></script>
-    </body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Philopong</title>
+    <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
+	<link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
+	<link id="page-style" rel="stylesheet" href="">
+</head>
+<body>
+	<div id="app"></div>
+	<script type="module" src="./js/main.js"></script>
+</body>
 </html>
