feat: tournament 관련 컴포넌트

--- a/frontend/tournament.html
+++ b/frontend/tournament.html
@@ -21,22 +21,12 @@
 				<div class="tournament-bracket__match" tabindex="0">
 				  <table class="tournament-bracket__table">
 					<tbody class="tournament-bracket__content">
-					  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-						<td class="tournament-bracket__player">
-						  <abbr class="tournament-bracket__code">phan</abbr>
-						  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
+					  <tr>
+						<td class="tournament-bracket__score d-flex justify-content-center">
+							<img style="max-width:100%; width: 40px; height:40px; border-radius: 100%;" src="./images/philopong.webp" class alt="">
 						</td>
-						<td class="tournament-bracket__score">
-						  <span class="tournament-bracket__number">4</span>
-						</td>
-					  </tr>
-					  <tr class="tournament-bracket__team">
-						<td class="tournament-bracket__player">
-						  <abbr class="tournament-bracket__code">soohlee</abbr>
-						  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
-						</td>
-						<td class="tournament-bracket__score">
-						  <span class="tournament-bracket__number">1</span>
+						<td class="tournament-bracket__player" style="text-align: center;">
+						  <span style="color: #000; font-weight: bold;">phan</span>
 						</td>
 					  </tr>
 					</tbody>
@@ -47,22 +37,12 @@
 				<div class="tournament-bracket__match" tabindex="0">
 				  <table class="tournament-bracket__table">
 					<tbody class="tournament-bracket__content">
-					  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-						<td class="tournament-bracket__player">
-						  <abbr class="tournament-bracket__code">phan</abbr>
-						  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
+					  <tr>
+						<td class="tournament-bracket__score d-flex justify-content-center">
+							<img style="max-width:100%; width: 40px; height:40px; border-radius: 100%;" src="./images/philopong.webp" class alt="">
 						</td>
-						<td class="tournament-bracket__score">
-						  <span class="tournament-bracket__number">4</span>
-						</td>
-					  </tr>
-					  <tr class="tournament-bracket__team">
-						<td class="tournament-bracket__player">
-						  <abbr class="tournament-bracket__code">soohlee</abbr>
-						  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
-						</td>
-						<td class="tournament-bracket__score">
-						  <span class="tournament-bracket__number">1</span>
+						<td class="tournament-bracket__player" style="text-align: center;">
+						  <span style="color: #000; font-weight: bold;">phan</span>
 						</td>
 					  </tr>
 					</tbody>
@@ -73,22 +53,12 @@
 				<div class="tournament-bracket__match" tabindex="0">
 				  <table class="tournament-bracket__table">
 					<tbody class="tournament-bracket__content">
-					  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-						<td class="tournament-bracket__player">
-						  <abbr class="tournament-bracket__code">phan</abbr>
-						  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
+					  <tr>
+						<td class="tournament-bracket__score d-flex justify-content-center">
+							<img style="max-width:100%; width: 40px; height:40px; border-radius: 100%;" src="./images/philopong.webp" class alt="">
 						</td>
-						<td class="tournament-bracket__score">
-						  <span class="tournament-bracket__number">4</span>
-						</td>
-					  </tr>
-					  <tr class="tournament-bracket__team">
-						<td class="tournament-bracket__player">
-						  <abbr class="tournament-bracket__code">soohlee</abbr>
-						  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
-						</td>
-						<td class="tournament-bracket__score">
-						  <span class="tournament-bracket__number">1</span>
+						<td class="tournament-bracket__player" style="text-align: center;">
+						  <span style="color: #000; font-weight: bold;">phan</span>
 						</td>
 					  </tr>
 					</tbody>
@@ -99,22 +69,12 @@
 				<div class="tournament-bracket__match" tabindex="0">
 				  <table class="tournament-bracket__table">
 					<tbody class="tournament-bracket__content">
-					  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-						<td class="tournament-bracket__player">
-						  <abbr class="tournament-bracket__code">phan</abbr>
-						  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
+					  <tr>
+						<td class="tournament-bracket__score d-flex justify-content-center">
+							<img style="max-width:100%; width: 40px; height:40px; border-radius: 100%;" src="./images/philopong.webp" class alt="">
 						</td>
-						<td class="tournament-bracket__score">
-						  <span class="tournament-bracket__number">4</span>
-						</td>
-					  </tr>
-					  <tr class="tournament-bracket__team">
-						<td class="tournament-bracket__player">
-						  <abbr class="tournament-bracket__code">soohlee</abbr>
-						  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
-						</td>
-						<td class="tournament-bracket__score">
-						  <span class="tournament-bracket__number">1</span>
+						<td class="tournament-bracket__player" style="text-align: center;">
+						  <span style="color: #000; font-weight: bold;">phan</span>
 						</td>
 					  </tr>
 					</tbody>
@@ -124,116 +84,55 @@
 			  </ul>
 		  </div>
 		  <div class="tournament-bracket__round tournament-bracket__round--semifinals">
-			<h3 class="tournament-bracket__round-title">2 Round</h3>
-			<ul class="tournament-bracket__list">
-				<li class="tournament-bracket__item">
-					<div class="tournament-bracket__match" tabindex="0">
-					  <table class="tournament-bracket__table">
-						<tbody class="tournament-bracket__content">
-						  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-							<td class="tournament-bracket__player">
-							  <abbr class="tournament-bracket__code">phan</abbr>
-							  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
-							</td>
-							<td class="tournament-bracket__score">
-							  <span class="tournament-bracket__number">4</span>
-							</td>
-						  </tr>
-						  <tr class="tournament-bracket__team">
-							<td class="tournament-bracket__player">
-							  <abbr class="tournament-bracket__code">soohlee</abbr>
-							  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
-							</td>
-							<td class="tournament-bracket__score">
-							  <span class="tournament-bracket__number">1</span>
-							</td>
-						  </tr>
-						</tbody>
-					  </table>
-					</div>
-				  </li>
-				  <li class="tournament-bracket__item">
-					<div class="tournament-bracket__match" tabindex="0">
-					  <table class="tournament-bracket__table">
-						<tbody class="tournament-bracket__content">
-						  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-							<td class="tournament-bracket__player">
-							  <abbr class="tournament-bracket__code">phan</abbr>
-							  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
-							</td>
-							<td class="tournament-bracket__score">
-							  <span class="tournament-bracket__number">4</span>
-							</td>
-						  </tr>
-						  <tr class="tournament-bracket__team">
-							<td class="tournament-bracket__player">
-							  <abbr class="tournament-bracket__code">soohlee</abbr>
-							  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
-							</td>
-							<td class="tournament-bracket__score">
-							  <span class="tournament-bracket__number">1</span>
-							</td>
-						  </tr>
-						</tbody>
-					  </table>
-					</div>
-				  </li>
-			</ul>
-		  </div>
-		  <div class="tournament-bracket__round tournament-bracket__round--bronze">
-			<h3 class="tournament-bracket__round-title">3nd/4th</h3>
-			<ul class="tournament-bracket__list">
-				<li class="tournament-bracket__item">
-					<div class="tournament-bracket__match" tabindex="0">
-					  <table class="tournament-bracket__table">
-						<tbody class="tournament-bracket__content">
-						  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-							<td class="tournament-bracket__player">
-							  <abbr class="tournament-bracket__code">phan</abbr>
-							  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
-							</td>
-							<td class="tournament-bracket__score">
-							  <span class="tournament-bracket__number">4</span>
-							</td>
-						  </tr>
-						  <tr class="tournament-bracket__team">
-							<td class="tournament-bracket__player">
-							  <abbr class="tournament-bracket__code">soohlee</abbr>
-							  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
-							</td>
-							<td class="tournament-bracket__score">
-							  <span class="tournament-bracket__number">1</span>
-							</td>
-						  </tr>
-						</tbody>
-					  </table>
-					</div>
-				  </li>
-			</ul>
-		  </div>
-		  <div class="tournament-bracket__round tournament-bracket__round--gold">
 			<h3 class="tournament-bracket__round-title">final game</h3>
 			<ul class="tournament-bracket__list">
 				<li class="tournament-bracket__item">
+				<div class="tournament-bracket__match" tabindex="0">
+				  <table class="tournament-bracket__table">
+					<tbody class="tournament-bracket__content">
+					  <tr>
+						<td class="tournament-bracket__score d-flex justify-content-center">
+							<img style="max-width:100%; width: 40px; height:40px; border-radius: 100%;" src="./images/philopong.webp" class alt="">
+						</td>
+						<td class="tournament-bracket__player" style="text-align: center;">
+						  <span style="color: #000; font-weight: bold;">phan</span>
+						</td>
+					  </tr>
+					</tbody>
+				  </table>
+				</div>
+			  </li>
+			  <li class="tournament-bracket__item">
+				<div class="tournament-bracket__match" tabindex="0">
+				  <table class="tournament-bracket__table">
+					<tbody class="tournament-bracket__content">
+					  <tr>
+						<td class="tournament-bracket__score d-flex justify-content-center">
+							<img style="max-width:100%; width: 40px; height:40px; border-radius: 100%;" src="./images/philopong.webp" class alt="">
+						</td>
+						<td class="tournament-bracket__player" style="text-align: center;">
+						  <span style="color: #000; font-weight: bold;">phan</span>
+						</td>
+					  </tr>
+					</tbody>
+				  </table>
+				</div>
+			  </li>
+			</ul>
+		  </div>
+		  <div class="tournament-bracket__round tournament-bracket__round--gold">
+			<h3 class="tournament-bracket__round-title">winner</h3>
+			<ul class="tournament-bracket__list">
+				<li class="tournament-bracket__item">
 					<div class="tournament-bracket__match" tabindex="0">
 					  <table class="tournament-bracket__table">
 						<tbody class="tournament-bracket__content">
-						  <tr class="tournament-bracket__team tournament-bracket__team--winner">
-							<td class="tournament-bracket__player">
-							  <abbr class="tournament-bracket__code">phan</abbr>
-							  <span class="tournament-bracket__flag flag-icon flag-icon-ca" aria-label="Flag"></span>
+						  <tr>
+							<td class="tournament-bracket__score d-flex justify-content-center">
+								<img style="max-width:100%; width: 40px; height:40px; border-radius: 100%;" src="./images/philopong.webp" class alt="">
 							</td>
-							<td class="tournament-bracket__score">
-							  <span class="tournament-bracket__number">4</span>
-							</td>
-						  </tr>
-						  <tr class="tournament-bracket__team">
-							<td class="tournament-bracket__player">
-							  <abbr class="tournament-bracket__code">soohlee</abbr>
-							  <span class="tournament-bracket__flag flag-icon flag-icon-kz" aria-label="Flag"></span>
-							</td>
-							<td class="tournament-bracket__score">
-							  <span class="tournament-bracket__number">1</span>
+							<td class="tournament-bracket__player" style="text-align: center;">
+							  <span style="color: #000; font-weight: bold;">phan</span>
 							</td>
 						  </tr>
 						</tbody>
