--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Philopong</title>
     <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script src="./js/core/translations.js"></script>
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 	<link id="page-style" rel="stylesheet" href="">
 </head>
