--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 	<div id="app"></div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 	<script type="module" src="./js/main.js"></script>
 </body>
 </html>
